# common_core

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  build.sh  pyproject.toml
common_core/config/: __init__.py  baseconfig.py  config.yaml  test_baseconfig.py  test_configvalue.py
common_core/config/baseclass/: __init__.py  config_enums.py  config_field.py  config_meta.py  config_value.py
common_core/config/testdata/: configs_by_default.yaml
common_core/utils/: __init__.py  dateparser.py  os_sys.py  test_dateparser.py  yaml.py
common_core/utils/baseclass/: __init__.py  nested_dataclass.py  yaml_loader.py
common_core/utils/enums/: custom_enum.py
common_core/utils/mapping/: __init__.py  proto_dataclass.py
common_core/utils/metaclass/: __init__.py  json_type.py  jsonn.py  test_jsontype.py
